Add French i18n translations for Period, AccountOrder models and fix interpolation errors
- Add i18n support for Period model labels (label, label_short, comparison_label)
- Add i18n support for AccountOrder model labels (label, label_short)
- Create French locale files for Period and AccountOrder models
- Fix profile page interpolation error (%{product} → %{product_name})
- Add French model name translations (catégorie, règle, étiquette, etc.)
- Translate keyboard shortcut "esc" to "échap" in settings nav
- Add missing French translations for account form fields
- Add French translations for account linking/unlinking features
- Fix various missing French translations across settings pages

--- a/config/locales/defaults/fr.yml
+++ b/config/locales/defaults/fr.yml
@@ -4,6 +4,22 @@ fr:
     brand_name: "%{brand_name}"
     product_name: "%{product_name}"
   activerecord:
+    models:
+      category: catégorie
+      rule: règle
+      tag: étiquette
+      account: compte
+      transaction: transaction
+      entry: entrée
+      balance: solde
+      transfer: virement
+      import: importation
+      merchant: vendeur
+      holding: avoir
+      trade: opération
+      security: titre
+      family: foyer
+      user: utilisateur
     errors:
       messages:
         record_invalid: 'La validation a échoué : %{errors}'
