--- a/config/locales/views/settings/fr.yml
+++ b/config/locales/views/settings/fr.yml
@@ -5,6 +5,7 @@ fr:
       show:
         page_title: Prompts IA
         openai_label: OpenAI
+        disable_ai: Désactiver l'assistant IA
         prompt_instructions: Instructions pour les prompts
         main_system_prompt:
           title: Prompt Système Principal
@@ -46,6 +47,7 @@ fr:
         theme_system: Système
         theme_title: Thème
         timezone: Fuseau horaire
+        translations_note: Veuillez noter que nous travaillons encore sur les traductions pour diverses langues.
     profiles:
       destroy:
         cannot_remove_self: Vous ne pouvez pas vous enlever de votre compte.
@@ -76,6 +78,8 @@ fr:
         reset_account_with_sample_data: Réinitialiser et précharger
         reset_account_with_sample_data_warning: Supprime toutes vos données existantes puis charge des données d'exemple afin que vous puissiez explorer avec un environnement pré-rempli.
         email: E-mail
+        unconfirmed_email_notice_html: "Vous avez demandé à changer votre email pour %{email}. Veuillez consulter vos emails et confirmer pour que le changement prenne effet. Si vous n'avez pas reçu l'email, vérifiez votre dossier spam, ou %{link}."
+        resend_confirmation_link: demandez un nouvel email de confirmation
         first_name: Prénom
         household_form_input_placeholder: Entrez le nom du foyer
         household_form_label: Nom du foyer
@@ -86,7 +90,7 @@ fr:
         last_name: Nom de famille
         page_title: Informations du profil
         pending: En attente
-        profile_subtitle: Personnalisez l'apparence de votre profil sur %{product}
+        profile_subtitle: Personnalisez l'apparence de votre profil sur %{product_name}
         profile_title: Personnel
         remove_invitation: Supprimer l'invitation
         remove_member: Supprimer le membre
@@ -94,7 +98,29 @@ fr:
     securities:
       show:
         page_title: Sécurité
+        mfa_title: Authentification à deux facteurs
+        mfa_description: Ajoutez une couche de sécurité supplémentaire à votre compte en exigeant un code de votre application d'authentification lors de la connexion
+        mfa_enabled_html: L'authentification à deux facteurs est <span class="font-medium text-green-600">activée</span>
+        mfa_enabled_description: Votre compte est protégé par une couche de sécurité supplémentaire.
+        mfa_disabled_html: L'authentification à deux facteurs est <span class="font-medium text-red-600">désactivée</span>
+        mfa_disabled_description: Activez l'A2F pour ajouter une couche de sécurité supplémentaire à votre compte.
+        enable_mfa: Activer l'A2F
+        disable_mfa: Désactiver l'A2F
+        disable_mfa_confirm: Êtes-vous sûr(e) de vouloir désactiver l'authentification à deux facteurs ?
+        sso_title: Comptes connectés
+        sso_subtitle: Gérez vos connexions de comptes SSO
+        sso_disconnect: Déconnecter
+        sso_last_used: Dernière utilisation
+        sso_never: Jamais
+        sso_no_email: Pas d'email
+        sso_no_identities: Aucun compte SSO connecté
+        sso_connect_hint: Déconnectez-vous et connectez-vous avec un fournisseur SSO pour lier un compte.
+        sso_confirm_title: Déconnecter le compte ?
+        sso_confirm_body: Êtes-vous sûr(e) de vouloir déconnecter votre compte %{provider} ? Vous pourrez le reconnecter plus tard en vous connectant à nouveau avec ce fournisseur.
+        sso_confirm_button: Déconnecter
+        sso_warning_message: Ceci est votre seule méthode de connexion. Vous devriez définir un mot de passe dans vos paramètres de sécurité avant de vous déconnecter, sinon vous risquez d'être bloqué(e) hors de votre compte.
     settings_nav:
+      esc: échap
       back: Retour
       accounts_label: Comptes
       advanced_section_title: Avancé
@@ -111,6 +137,7 @@ fr:
       other_section_title: Plus
       preferences_label: Préférences
       profile_label: Informations du profil
+      recurring_transactions_label: Récurrentes
       rules_label: Règles
       security_label: Sécurité
       self_hosting_label: Auto-hébergement
@@ -119,7 +146,11 @@ fr:
       whats_new_label: Dernières nouvelles
       simplefin_label: SimpleFin
       api_keys_label: Clés API
-      bank_sync_label: Synchronisation de la banque
+      bank_sync_label: Synchronisation bancaire
+      llm_usage_label: Utilisation LLM
+      providers_label: Fournisseurs
+      sso_providers_label: Fournisseurs SSO
+      users_label: Utilisateurs
     settings_nav_link_large:
       next: Suivant
       previous: Précédent
